--- a/src/app/mecanico/mecanico.component.html
+++ b/src/app/mecanico/mecanico.component.html
@@ -1,3 +1,6 @@
-<p>mecanico works!</p>
+<p>-Mecanico Works-</p>
 
 <p>Variable tallerHijo: {{tallerHijo}}</p>
+
+<input [formControl]="dia">
+<button (click)="decirHorario(dia)">Horario de atencion</button>
