--- a/src/app/automovil/automovil.component.html
+++ b/src/app/automovil/automovil.component.html
@@ -3,32 +3,31 @@
 
     
 
-    <div class="datosAutomovil">
+    <div>
         <mat-form-field appearance="fill">
             <mat-label>Marca</mat-label>
             <input type="text" formControlName="marca" matInput>
           </mat-form-field>
 
-          <mat-form-field appearance="fill">
+    </div>
+
+    <div>
+        <mat-form-field appearance="fill">
             <mat-label>Año</mat-label>
             <input type="text" formControlName="año" matInput>
           </mat-form-field>
-       
+    </div>
+
+    <h3>Datos Tecnicos</h3>
+    <div formGroupName="datosTecnicos" class="datosTecnicos">
+        <mat-checkbox class="example-margin" formControlName="enMarcha">Vehiculo Funcionando?</mat-checkbox>
     </div>
 
     <div formGroupName="datosTecnicos" class="datosTecnicos">
-        <h3>Datos Tecnicos</h3>
-
         <mat-form-field appearance="fill">
-            <mat-label>Vehiculo Funcionando?</mat-label>
-            <input type="text" formControlName="enMarcha" matInput>
+            <mat-label>Ultimo Servicio</mat-label>
+            <input type="text" formControlName="ultimoServicio" matInput>
           </mat-form-field>
-           
-            <mat-form-field appearance="fill">
-                <mat-label>Ultimo Servicio</mat-label>
-                <input type="text" formControlName="ultimoServicio" matInput>
-              </mat-form-field>
-       
     </div>
 
     <!-- Uso de interpolacion-->
